--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "lodash": "^4.17.10",
+    "npm": "^6.4.1",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-youtube-embed": "^2.1.2",
