--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,14 @@
     "express": "^4.16.3",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.0",
+    "kuroshiro": "^1.1.1",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
+    "kuroshiro-analyzer-yahoo-webapi": "^1.1.0",
     "morgan": "^1.9.0",
     "mysql2": "^1.6.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
-    "sequelize": "^4.38.0",
-    "sqlite": "^3.0.0",
-    "sqlite3": "^3.1.8"
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "eslint": "^4.6.0",
