--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.10",
     "npm": "^6.4.1",
     "vue": "^2.4.2",
+    "vue-moment": "^4.0.0",
     "vue-router": "^2.7.0",
     "vue-youtube-embed": "^2.1.2",
     "vuetify": "^0.15.2",
