--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.4.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^2.7.0",
+    "vue-spinner": "^1.0.3",
     "vue-youtube-embed": "^2.1.2",
     "vuetify": "^0.15.2",
     "vuex": "^2.4.0",
