--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,9 @@
   "author": "Cody Seibert <cseibert113@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "dev": "NODE_ENV=development node build/dev-server.js",
+    "start": "NODE_ENV=production node build/dev-server.js",
+    "build": "NODE_ENV=production node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
