--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,7 +10,7 @@ COPY package*.json ./
 
 # RUN npm install
 # If you are building your code for production
-# RUN npm install --only=production
+RUN npm install --only=production
 # docker run -p 8088:8088 -e API_URL="'localhost:8080'"  hatcha82:0.01
 #API_URL 서비스를 제공할 서버의 주소 :  반드시 "'IP:PORT'" 전달 필요
 
