--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
     "vue-spinner": "^1.0.3",
+    "vue-underscore": "^0.1.4",
     "vuetify": "^1.2.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
