--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,8 @@
     "vue-scrollto": "^2.13.0",
     "vue-spinner": "^1.0.3",
     "vue-underscore": "^0.1.4",
+    "vue-video": "^0.1.7",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^1.2.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
