--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ client/config/index.js
 client/src/components/Article/List/Index.vue
 server/package-lock.json
 server/seed/users.json
+bot/twitFuriganaKanjiBot/config/config.js
+bot/twitFuriganaKanjiBot/config/config.js
