--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 client/node_modules/
 server/node_modules/
+bot/YoubueTagBot/node_modules/
+bot/twitFuriganaKanjiBot/node_modules/
+bot/lyricsCrawBot/node_modules/
 
 server/src/config/config.js
 client/src/services/Api.js
