--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "axios": "^0.18.0",
+    "dotenv": "^6.0.0",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "moment": "^2.22.2",
