--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.0",
