--- a/client-app/package.json
+++ b/client-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "furigana-client-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -35,7 +35,7 @@
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
-    "vue-cli-plugin-vuetify": "^0.2.0",
+    "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
