--- a/bot/YoubueTagBot/package.json
+++ b/bot/YoubueTagBot/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "crawler": "^1.2.0",
+    "dotenv": "^6.0.0",
     "mysql2": "^1.6.1",
     "sequelize": "^4.39.0"
   }
