--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=8080
-DB_NAME='jpn_tuto'
-DB_USER='jpn_tuto'
-DB_PASS='jpn_tuto'
-DIALECT='mysql'
-HOST='db.furiganahub.com'
+DB_NAME=''
+DB_USER=''
+DB_PASS=''
+DIALECT=''
+HOST=''
