--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,10 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.6.1",
+    "eslint-loader": "^2.1.1",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
