--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,7 +18,9 @@ WORKDIR /tmp/nginx/furiganahub-vuejs-app
 # Copy our source code into the container
 COPY . .
 # Install the dependencies, can be commented out if you're running the same node version
-RUN npm install
+RUN npm install vue-cli -g
+RUN npm install 
+
 
 # run webpack and the vue-loader
 RUN npm run build
