--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-backtotop": "^1.4.12",
     "vue-head": "^2.0.12",
     "vue-infinite-scroll": "^2.0.2",
