--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # RUN npm install 
-# If you are building your code for production
-RUN npm install --only=production
+# If you are building your code for production --only=production 
+RUN npm install
 
 # Bundle app source
 COPY . .
