--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js --exec  \"npm run lint && node\"",
+    "start": "nodemon src/app.js --exec  \"npm run lint && node\"",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js  --fix",
     "seed": "node seed"
@@ -17,7 +17,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.0",
@@ -34,7 +34,8 @@
     "passport-kakao": "0.0.5",
     "passport-naver": "^1.0.6",
     "sequelize": "^4.38.0",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "nodemon": "^1.18.4"
   },
   "devDependencies": {
     "eslint": "^4.6.0",
@@ -42,7 +43,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.18.4"
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
