--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: g8ckdqja1013
-    volume:
-     - "mariadb:/var/lib/postgresql/data"
+    volumes:
+     - "mariadb:/var/lib/mysql"
     ports:
-     - "3308:3306"
+     - "3306:3306"
 
   furigana-web-app-client:
     build: client
@@ -24,3 +24,5 @@ services:
      - "8080:8080"
     depends_on:
      - db
+volumes:
+  mariadb:
