--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.0.0-rc.1",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "moment": "^2.22.2",
@@ -33,14 +34,14 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "eslint": "^5.6.1",
-    "eslint-loader": "^2.1.1",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.6.1",
+    "eslint-loader": "^2.1.1",
     "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   },
