--- a/bot/papagoBot/package.json
+++ b/bot/papagoBot/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "request": "^2.88.0",
     "mysql2": "^1.6.1",
-    "sequelize": "^4.39.0"
+    "nodemon": "^1.18.4",
+    "request": "^2.88.0",
+    "sequelize": "^4.39.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
