--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "eslint-plugin-vue": "^4.7.1",
+    "express": "^4.16.4",
     "ipify": "^2.0.0",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
+    "material-design-icons-iconfont": "^3.0.3",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-authenticate": "^1.3.4",
@@ -22,9 +24,11 @@
     "vue-backtotop": "^1.4.12",
     "vue-head": "^2.0.12",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-meta": "^1.5.5",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
+    "vue-server-renderer": "^2.5.17",
     "vue-spinner": "^1.0.3",
     "vue-underscore": "^0.1.4",
     "vue-video": "^0.1.7",
