--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bot/YoubueTagBot/node_modules/
 bot/ImageGifFuriganaKanjiBot/node_modules/
 bot/twitFuriganaKanjiBot/node_modules/
 bot/lyricsCrawBot/node_modules/
+bot/pantomTest/node_modules/
 bot/kakaoStoryBot/node_modules/
 bot/kakaoStoryBot/.env
 bot/papagoBot/node_modules/
