--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.0",
     "kuroshiro": "^1.1.1",
