--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 client/node_modules/
 server/node_modules/
+devTest/puppeteer/node_modules/
 bot/YoubueTagBot/node_modules/
 bot/ImageGifFuriganaKanjiBot/node_modules/
 bot/twitFuriganaKanjiBot/node_modules/
