--- a/bot/blogbot/.env
+++ b/bot/blogbot/.env
@@ -1,7 +1,8 @@
-PORT=8081
+NAVER_CLIENT_ID='w7FsuKKmd0_0nh3h_yIb'
+NAVER_CLIENT_SECRET='ONSQVwlB8B'
+PORT=8080
 DB_NAME='jpn_tuto'
 DB_USER='jpn_tuto'
 DB_PASS='jpn_tuto'
 DIALECT='mysql'
 HOST='db.furiganahub.com'
-~
