--- a/devTest/puppeteer/package.json
+++ b/devTest/puppeteer/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^1.9.0"
+    "puppeteer": "^1.9.0",
+    "dotenv": "^6.0.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.39.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
