--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,9 @@
-PORT=8080
-DB_NAME='jpn_tuto'
-DB_USER='jpn_tuto'
-DB_PASS='jpn_tuto'
-DIALECT='mysql'
-HOST='db.furiganahub.com'
-~
+PORT=8081
+DB_NAME=''
+DB_USER=''
+DB_PASS=''
+DIALECT=''
+HOST=''
+NAVER_CLIENT_ID=''
+NAVER_CLIENT_SECRET=''
+
