--- a/bot/lyricsCrawBot/package.json
+++ b/bot/lyricsCrawBot/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "crawler": "^1.2.0",
+    "dotenv": "^6.1.0",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mysql2": "^1.6.1",
+    "puppeteer": "^1.10.0",
     "sequelize": "^4.39.0"
   }
 }
