--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "vue-video": "^0.1.7",
     "vue-video-player": "^5.0.2",
     "vuetify": "^1.2.0",
+    "vuetify-audio": "0.0.8",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0"
