--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ server/.env
 devTest/kanjiExtractor/node_modules/
 devTest/kanjiExtractor/.env
 devTest/puppeteer/node_modules/
+bot/ituneImageFinderBot/node_modules/
+bot/ituneImageFinderBot/.env
 bot/tstoryBot/node_modules/
 bot/tstoryBot/.env
 bot/YoubueTagBot/node_modules/
