--- a/bot/lyricsCrawBot/.env
+++ b/bot/lyricsCrawBot/.env
@@ -1,9 +1,9 @@
 NAVER_CLIENT_ID='w7FsuKKmd0_0nh3h_yIb'
 NAVER_CLIENT_SECRET='ONSQVwlB8B'
 PORT=8080
-DB_NAME='jpn_tuto'
-DB_USER='jpn_tuto'
-DB_PASS='jpn_tuto'
+DB_NAME=''
+DB_USER=''
+DB_PASS=''
 DIALECT='mysql'
-HOST='db.furiganahub.com'
+HOST=''
 
