--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,9 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-prettier": "^3.0.0",
     "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   },
@@ -58,6 +60,7 @@
     },
     "extends": [
       "plugin:vue/essential",
+      "plugin:prettier/recommended",
       "eslint:recommended"
     ],
     "rules": {},
