--- a/server/package.json
+++ b/server/package.json
@@ -20,22 +20,23 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "joi": "^10.6.0",
+    "joi": "^14.1.0",
     "jsonwebtoken": "^8.0.0",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "kuroshiro-analyzer-yahoo-webapi": "^1.1.0",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
     "papago": "^1.1.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
-    "passport-jwt": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-kakao": "0.0.5",
     "passport-naver": "^1.0.6",
     "request-ip": "^2.1.1",
+    "rss-parser": "^3.5.4",
     "sequelize": "^4.38.0",
     "twitter": "^1.7.1"
   },
