--- a/bot/blogbot/package.json
+++ b/bot/blogbot/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
+    "image-to-base64": "^2.0.1",
     "mysql2": "^1.6.1",
     "request": "^2.88.0",
     "sequelize": "^4.39.0"
