--- a/bot/douwaBot/package.json
+++ b/bot/douwaBot/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "twit_furigana_bot",
+  "name": "newsbot",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crawler": "^1.2.0",
     "dotenv": "^6.2.0",
-    "image-to-base64": "^2.0.1",
+    "jsdom": "^13.1.0",
     "kuroshiro": "^1.1.1",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mysql2": "^1.6.1",
-    "papago": "^1.1.1",
-    "sequelize": "^4.39.0",
-    "twitter": "^1.7.1",
-    "twitter-text": "^2.0.5",
-    "unofficial-jisho-api": "^1.1.1"
+    "sequelize": "^4.39.0"
   }
 }
